IF(DEFINED ENV{IDF_PATH})
    # ESP-IDF component setup
    file(GLOB srcs ./src/*.c)
    idf_component_register(SRCS ${srcs}
        INCLUDE_DIRS "include"
        # Note: Managed components are added automatically
        REQUIRES nvs_flash bt esp_eth esp_http_server esp-mqtt esp-osc app_update fatfs
    )
ELSE()
    # CLion compatible development setup
    cmake_minimum_required(VERSION 3.7)
    project(naos-com)
    set(CMAKE_C_STANDARD 99)
    file(GLOB SOURCE_FILES ./src/*.h ./src/*.c ./test/main/*.c)
    add_library(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
    target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC
        ./include
        ./test/build/config
        ./test/components/esp-mqtt
        ./test/components/esp-mqtt/lwmqtt/include
        ./test/components/esp-osc
        ./test/managed_components/espressif__tinyusb/src
        ./test/managed_components/espressif__esp_tinyusb/include
        ./test/managed_components/espressif__mdns/include
        ./test/esp-idf/components/newlib/platform_include
        ./test/esp-idf/components/freertos/config/include
        ./test/esp-idf/components/freertos/config/include/freertos
        ./test/esp-idf/components/freertos/config/xtensa/include
        ./test/esp-idf/components/freertos/FreeRTOS-Kernel/include
        ./test/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include
        ./test/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos
        ./test/esp-idf/components/freertos/esp_additions/include
        ./test/esp-idf/components/esp_hw_support/include
        ./test/esp-idf/components/esp_hw_support/include/soc
        ./test/esp-idf/components/esp_hw_support/include/soc/esp32s3
        ./test/esp-idf/components/esp_hw_support/dma/include
        ./test/esp-idf/components/esp_hw_support/ldo/include
        ./test/esp-idf/components/esp_hw_support/port/esp32s3/.
        ./test/esp-idf/components/esp_hw_support/port/esp32s3/include
        ./test/esp-idf/components/heap/include
        ./test/esp-idf/components/log/include
        ./test/esp-idf/components/soc/include
        ./test/esp-idf/components/soc/esp32s3
        ./test/esp-idf/components/soc/esp32s3/include
        ./test/esp-idf/components/hal/platform_port/include
        ./test/esp-idf/components/hal/esp32s3/include
        ./test/esp-idf/components/hal/include
        ./test/esp-idf/components/esp_rom/include
        ./test/esp-idf/components/esp_rom/include/esp32s3
        ./test/esp-idf/components/esp_rom/esp32s3
        ./test/esp-idf/components/esp_common/include
        ./test/esp-idf/components/esp_system/include
        ./test/esp-idf/components/esp_system/port/soc
        ./test/esp-idf/components/esp_system/port/include/private
        ./test/esp-idf/components/xtensa/esp32s3/include
        ./test/esp-idf/components/xtensa/include
        ./test/esp-idf/components/xtensa/deprecated_include
        ./test/esp-idf/components/lwip/include
        ./test/esp-idf/components/lwip/include/apps
        ./test/esp-idf/components/lwip/include/apps/sntp
        ./test/esp-idf/components/lwip/lwip/src/include
        ./test/esp-idf/components/lwip/port/include
        ./test/esp-idf/components/lwip/port/freertos/include
        ./test/esp-idf/components/lwip/port/esp32xx/include
        ./test/esp-idf/components/lwip/port/esp32xx/include/arch
        ./test/esp-idf/components/lwip/port/esp32xx/include/sys
        ./test/esp-idf/components/esp_driver_gpio/include
        ./test/esp-idf/components/esp_pm/include
        ./test/esp-idf/components/mbedtls/port/include
        ./test/esp-idf/components/mbedtls/mbedtls/include
        ./test/esp-idf/components/mbedtls/mbedtls/library
        ./test/esp-idf/components/mbedtls/esp_crt_bundle/include
        ./test/esp-idf/components/mbedtls/mbedtls/3rdparty/everest/include
        ./test/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m
        ./test/esp-idf/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m
        ./test/esp-idf/components/esp_app_format/include
        ./test/esp-idf/components/esp_bootloader_format/include
        ./test/esp-idf/components/app_update/include
        ./test/esp-idf/components/bootloader_support/include
        ./test/esp-idf/components/bootloader_support/bootloader_flash/include
        ./test/esp-idf/components/esp_partition/include
        ./test/esp-idf/components/efuse/include
        ./test/esp-idf/components/efuse/esp32s3/include
        ./test/esp-idf/components/esp_mm/include
        ./test/esp-idf/components/spi_flash/include
        ./test/esp-idf/components/pthread/include
        ./test/esp-idf/components/esp_timer/include
        ./test/esp-idf/components/esp_driver_gptimer/include
        ./test/esp-idf/components/esp_ringbuf/include
        ./test/esp-idf/components/esp_driver_uart/include
        ./test/esp-idf/components/vfs/include
        ./test/esp-idf/components/app_trace/include
        ./test/esp-idf/components/esp_event/include
        ./test/esp-idf/components/nvs_flash/include
        ./test/esp-idf/components/esp_driver_pcnt/include
        ./test/esp-idf/components/esp_driver_spi/include
        ./test/esp-idf/components/esp_driver_mcpwm/include
        ./test/esp-idf/components/esp_driver_ana_cmpr/include
        ./test/esp-idf/components/esp_driver_i2s/include
        ./test/esp-idf/components/sdmmc/include
        ./test/esp-idf/components/esp_driver_sdmmc/include
        ./test/esp-idf/components/esp_driver_sdspi/include
        ./test/esp-idf/components/esp_driver_sdio/include
        ./test/esp-idf/components/esp_driver_dac/include
        ./test/esp-idf/components/esp_driver_rmt/include
        ./test/esp-idf/components/esp_driver_tsens/include
        ./test/esp-idf/components/esp_driver_sdm/include
        ./test/esp-idf/components/esp_driver_i2c/include
        ./test/esp-idf/components/esp_driver_ledc/include
        ./test/esp-idf/components/esp_driver_parlio/include
        ./test/esp-idf/components/esp_driver_usb_serial_jtag/include
        ./test/esp-idf/components/driver/deprecated
        ./test/esp-idf/components/driver/i2c/include
        ./test/esp-idf/components/driver/touch_sensor/include
        ./test/esp-idf/components/driver/twai/include
        ./test/esp-idf/components/driver/touch_sensor/esp32s3/include
        ./test/esp-idf/components/esp_phy/include
        ./test/esp-idf/components/esp_phy/esp32s3/include
        ./test/esp-idf/components/esp_vfs_console/include
        ./test/esp-idf/components/esp_netif/include
        ./test/esp-idf/components/wpa_supplicant/include
        ./test/esp-idf/components/wpa_supplicant/port/include
        ./test/esp-idf/components/wpa_supplicant/esp_supplicant/include
        ./test/esp-idf/components/esp_coex/include
        ./test/esp-idf/components/esp_wifi/include
        ./test/esp-idf/components/esp_wifi/wifi_apps/include
        ./test/esp-idf/components/esp_wifi/wifi_apps/nan_app/include
        ./test/esp-idf/components/esp_wifi/include/local
        ./test/esp-idf/components/bt/include/esp32c3/include
        ./test/esp-idf/components/bt/common/osi/include
        ./test/esp-idf/components/bt/common/api/include/api
        ./test/esp-idf/components/bt/common/btc/profile/esp/blufi/include
        ./test/esp-idf/components/bt/common/btc/profile/esp/include
        ./test/esp-idf/components/bt/common/hci_log/include
        ./test/esp-idf/components/bt/host/bluedroid/api/include/api
        ./test/esp-idf/components/bt/porting/ext/tinycrypt/include
        ./test/esp-idf/components/unity/include
        ./test/esp-idf/components/unity/unity/src
        ./test/esp-idf/components/cmock/CMock/src
        ./test/esp-idf/components/console
        ./test/esp-idf/components/http_parser
        ./test/esp-idf/components/esp-tls
        ./test/esp-idf/components/esp-tls/esp-tls-crypto
        ./test/esp-idf/components/esp_adc/include
        ./test/esp-idf/components/esp_adc/interface
        ./test/esp-idf/components/esp_adc/esp32s3/include
        ./test/esp-idf/components/esp_adc/deprecated/include
        ./test/esp-idf/components/esp_driver_isp/include
        ./test/esp-idf/components/esp_driver_cam/include
        ./test/esp-idf/components/esp_driver_cam/interface
        ./test/esp-idf/components/esp_driver_jpeg/include
        ./test/esp-idf/components/esp_driver_ppa/include
        ./test/esp-idf/components/esp_eth/include
        ./test/esp-idf/components/esp_gdbstub/include
        ./test/esp-idf/components/esp_hid/include
        ./test/esp-idf/components/tcp_transport/include
        ./test/esp-idf/components/esp_http_client/include
        ./test/esp-idf/components/esp_http_server/include
        ./test/esp-idf/components/esp_https_ota/include
        ./test/esp-idf/components/esp_https_server/include
        ./test/esp-idf/components/esp_psram/include
        ./test/esp-idf/components/esp_lcd/include
        ./test/esp-idf/components/esp_lcd/interface
        ./test/esp-idf/components/esp_lcd/rgb/include
        ./test/esp-idf/components/protobuf-c/protobuf-c
        ./test/esp-idf/components/protocomm/include/common
        ./test/esp-idf/components/protocomm/include/security
        ./test/esp-idf/components/protocomm/include/transports
        ./test/esp-idf/components/protocomm/include/crypto/srp6a
        ./test/esp-idf/components/protocomm/proto-c
        ./test/esp-idf/components/esp_local_ctrl/include
        ./test/esp-idf/components/espcoredump/include
        ./test/esp-idf/components/espcoredump/include/port/xtensa
        ./test/esp-idf/components/wear_levelling/include
        ./test/esp-idf/components/fatfs/diskio
        ./test/esp-idf/components/fatfs/src
        ./test/esp-idf/components/fatfs/vfs
        ./test/esp-idf/components/idf_test/include
        ./test/esp-idf/components/idf_test/include/esp32s3
        ./test/esp-idf/components/ieee802154/include
        ./test/esp-idf/components/json/cJSON
        ./test/esp-idf/components/mqtt/esp-mqtt/include
        ./test/esp-idf/components/nvs_sec_provider/include
        ./test/esp-idf/components/perfmon/include
        ./test/esp-idf/components/spiffs/include
        ./test/esp-idf/components/touch_element/include
        ./test/esp-idf/components/usb/include
        ./test/esp-idf/components/wifi_provisioning/include)
ENDIF()
